force-app/main/default/objects/custom_create83__c/custom_create83__c.object-meta.xml
<CustomObject>
    <label>Custom created object83</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects83</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>