force-app/main/default/objects/custom_create83__c/fields/custom_create_83field541__c.field-meta.xml
<CustomField>
    <fullName>custom_create_83field541__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 83field541</label>
    <type>Checkbox</type>
</CustomField>